[KARAF-1019] Set java perm memory options only when required
git-svn-id: https://svn.apache.org/repos/asf/karaf/branches/karaf-2.2.x@1210651 13f79535-47bb-0310-9956-ffa450edef68